@@ -33,6 +33,7 @@ v 8.13.0 (unreleased)
   - Notify the Merger about merge after successful build (Dimitris Karakasilis)
   - Fix broken repository 500 errors in project list
   - Close todos when accepting merge requests via the API !6486 (tonygambone)
+  - Changed Slack service user referencing from full name to username (Sebastian Poxhofer) 
 
 v 8.12.4 (unreleased)
 
